Fix gap above header in gallery.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -429,19 +429,19 @@
   }
 }
 
-.container {
+.gallery-container {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[6];
       grid-template-columns: repeat(6, 1fr);
-  margin: 20px;
+  margin: 0 20px;
   grid-auto-rows: 200px 200px;
   grid-gap: 10px;
   grid-auto-flow: dense;
 }
 
 @media screen and (max-width: 500px) {
-  .container {
+  .gallery-container {
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
   }
